--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -440,7 +440,14 @@ section h2 {
         height: 600px;
     }
 
-
+    .overlay {
+       background:transparent;
+       position:relative;
+       width:100%;
+       height:600px; /* your iframe height */
+       top:600px;  /* your iframe height */
+       margin-top:-600px;  /* your iframe height */
+    }
 
 /* ========================
     INTERMEDIATE: IE Fixes
